# Treasach-Raytracer

./: .gitignore  CMakeLists.txt  README.md
doc/: TODO.txt
lib/: CMakeLists.txt
src/: main.cpp
src/examples/: Examples.h  Test.h
src/geometry/: Constants.cpp  Constants.h  SphereMath.cpp  SphereMath.h  Vector.cpp  Vector.h  Vector3.cpp  Vector3.h
src/noise/: RNG.cpp  RNG.h
src/primitives/: AABB.cpp  AABB.h  FlatDisk.cpp  FlatDisk.h  FlatInfinitePlane.cpp  FlatInfinitePlane.h  SceneObject.h  Sphere.cpp  Sphere.h
src/rendering/: Camera.cpp  Camera.h  NormalTracer.cpp  NormalTracer.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Screen.cpp  Screen.h  Tracer.cpp  Tracer.h
src/scene/: Scene.cpp  Scene.h
src/shading/: BRDF.cpp  BRDF.h  Colour.cpp  Colour.h  EmissionFunction.cpp  EmissionFunction.h  Material.cpp  Material.h  Texture.h
test/: HemisphericSamples.py
